--- a/notebooks/featurestore/aws/SageMakerFeaturestoreTourPython.ipynb
+++ b/notebooks/featurestore/aws/SageMakerFeaturestoreTourPython.ipynb
@@ -35,53 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting git+https://github.com/moritzmeister/hopsworks-cloud-sdk@testing-1302\n",
-      "  Cloning https://github.com/moritzmeister/hopsworks-cloud-sdk (to revision testing-1302) to /tmp/pip-req-build-rbzjzn60\n",
-      "Requirement not upgraded as not directly required: numpy in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from hopsworks-cloud-sdk==0.10.0.0) (1.14.3)\n",
-      "Requirement not upgraded as not directly required: pandas in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from hopsworks-cloud-sdk==0.10.0.0) (0.24.2)\n",
-      "Requirement not upgraded as not directly required: pyhopshive[thrift] in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from hopsworks-cloud-sdk==0.10.0.0) (0.6.4.dev0)\n",
-      "Requirement not upgraded as not directly required: boto3>=1.9.226 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from hopsworks-cloud-sdk==0.10.0.0) (1.9.239)\n",
-      "Requirement not upgraded as not directly required: SQLAlchemy in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from hopsworks-cloud-sdk==0.10.0.0) (1.2.11)\n",
-      "Requirement not upgraded as not directly required: PyMySQL in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from hopsworks-cloud-sdk==0.10.0.0) (0.9.3)\n",
-      "Requirement not upgraded as not directly required: pytz>=2011k in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from pandas->hopsworks-cloud-sdk==0.10.0.0) (2018.4)\n",
-      "Requirement not upgraded as not directly required: python-dateutil>=2.5.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from pandas->hopsworks-cloud-sdk==0.10.0.0) (2.7.3)\n",
-      "Requirement not upgraded as not directly required: pyjks in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from pyhopshive[thrift]->hopsworks-cloud-sdk==0.10.0.0) (19.0.0)\n",
-      "Requirement not upgraded as not directly required: future in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from pyhopshive[thrift]->hopsworks-cloud-sdk==0.10.0.0) (0.17.1)\n",
-      "Requirement not upgraded as not directly required: thrift>=0.10.0; extra == \"thrift\" in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from pyhopshive[thrift]->hopsworks-cloud-sdk==0.10.0.0) (0.11.0)\n",
-      "Requirement not upgraded as not directly required: botocore<1.13.0,>=1.12.239 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from boto3>=1.9.226->hopsworks-cloud-sdk==0.10.0.0) (1.12.239)\n",
-      "Requirement not upgraded as not directly required: jmespath<1.0.0,>=0.7.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from boto3>=1.9.226->hopsworks-cloud-sdk==0.10.0.0) (0.9.4)\n",
-      "Requirement not upgraded as not directly required: s3transfer<0.3.0,>=0.2.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from boto3>=1.9.226->hopsworks-cloud-sdk==0.10.0.0) (0.2.1)\n",
-      "Requirement not upgraded as not directly required: six>=1.5 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from python-dateutil>=2.5.0->pandas->hopsworks-cloud-sdk==0.10.0.0) (1.11.0)\n",
-      "Requirement not upgraded as not directly required: twofish in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from pyjks->pyhopshive[thrift]->hopsworks-cloud-sdk==0.10.0.0) (0.3.0)\n",
-      "Requirement not upgraded as not directly required: pycryptodomex in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from pyjks->pyhopshive[thrift]->hopsworks-cloud-sdk==0.10.0.0) (3.9.0)\n",
-      "Requirement not upgraded as not directly required: pyasn1-modules in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from pyjks->pyhopshive[thrift]->hopsworks-cloud-sdk==0.10.0.0) (0.2.6)\n",
-      "Requirement not upgraded as not directly required: pyasn1>=0.3.5 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from pyjks->pyhopshive[thrift]->hopsworks-cloud-sdk==0.10.0.0) (0.4.7)\n",
-      "Requirement not upgraded as not directly required: javaobj-py3 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from pyjks->pyhopshive[thrift]->hopsworks-cloud-sdk==0.10.0.0) (0.3.0)\n",
-      "Requirement not upgraded as not directly required: urllib3<1.26,>=1.20; python_version >= \"3.4\" in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from botocore<1.13.0,>=1.12.239->boto3>=1.9.226->hopsworks-cloud-sdk==0.10.0.0) (1.23)\n",
-      "Requirement not upgraded as not directly required: docutils<0.16,>=0.10 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from botocore<1.13.0,>=1.12.239->boto3>=1.9.226->hopsworks-cloud-sdk==0.10.0.0) (0.14)\n",
-      "Building wheels for collected packages: hopsworks-cloud-sdk\n",
-      "  Running setup.py bdist_wheel for hopsworks-cloud-sdk ... \u001b[?25ldone\n",
-      "\u001b[?25h  Stored in directory: /tmp/pip-ephem-wheel-cache-7m13pz0j/wheels/fb/b7/1f/6cea03e20998ec5ad84342bcc558d0070123d368e259dd1136\n",
-      "Successfully built hopsworks-cloud-sdk\n",
-      "Installing collected packages: hopsworks-cloud-sdk\n",
-      "  Found existing installation: hopsworks-cloud-sdk 0.10.0.0\n",
-      "    Uninstalling hopsworks-cloud-sdk-0.10.0.0:\n",
-      "      Successfully uninstalled hopsworks-cloud-sdk-0.10.0.0\n",
-      "Successfully installed hopsworks-cloud-sdk-0.10.0.0\n",
-      "\u001b[33mYou are using pip version 10.0.1, however version 19.2.3 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install --upgrade git+https://github.com/moritzmeister/hopsworks-cloud-sdk@testing-1302"
+    "!pip install hopsworks-cloud-sdk"
    ]
   },
   {
@@ -120,8 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#featurestore.connect('my_instance.us-east-2.compute.internal', 'demo_featurestore_admin000', 8181, secrets_store = 'secretsmanager')\n",
-    "featurestore.connect('ec2-18-191-210-162.us-east-2.compute.amazonaws.com', 'demo_featurestore_admin000')"
+    "featurestore.connect('my_instance.us-east-2.compute.internal', 'demo_featurestore_admin000', 8181, secrets_store = 'secretsmanager')"
    ]
   },
   {
