--- a/notebooks/featurestore/gcp/colab.ipynb
+++ b/notebooks/featurestore/gcp/colab.ipynb
@@ -1,12 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "satisfactory-lucas",
+   "cell_type": "markdown",
+   "id": "18c7cb4d",
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Google Colab ML Feature Store Tour\"\n",
+    "title: \"Colab Hopsworks Feature Store Tour\"\n",
     "date: 2021-02-24\n",
     "type: technical_note\n",
     "draft: false\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "atomic-internship",
+   "id": "2ea3242e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "corporate-lease",
+   "id": "5a341472",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "posted-dakota",
+   "id": "4073756a",
    "metadata": {},
    "source": [
     "## Show the first 5 rows in the Demo Feature Group\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "allied-investor",
+   "id": "e0923c1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "isolated-outside",
+   "id": "41acd71c",
    "metadata": {},
    "source": [
     "## Ingest some features into the Feature Store as a Feature Group\n",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "architectural-court",
+   "id": "afcdf145",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tutorial-brazilian",
+   "id": "d56797b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regulation-disco",
+   "id": "1ffbc354",
    "metadata": {},
    "source": [
     "## Feature Data Validation\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "failing-postcard",
+   "id": "a0a05935",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "smoking-monitoring",
+   "id": "5edc3e95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "built-clear",
+   "id": "6b90cbeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "painful-qualification",
+   "id": "790ea892",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chubby-program",
+   "id": "063b0d51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "norman-slovak",
+   "id": "da3e4612",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "pacific-replacement",
+   "id": "32e0ffd0",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surprised-islam",
+   "id": "d619fb5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "occupied-police",
+   "id": "9d0c6b0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python",
    "language": "python",
    "name": "python3"
   },
@@ -308,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
