--- a/notebooks/featurestore/hsfs/snowflake/python.ipynb
+++ b/notebooks/featurestore/hsfs/snowflake/python.ipynb
@@ -1,17 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2ee50c90",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Snowflake: Python Example\"\n",
+    "date: 2021-02-24\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04123bec",
+   "metadata": {},
    "source": [
     "# Python\n",
     "Additional options are not supported in python. If you have additional options in your connector you need to add then to the \"sfConnectorOptions\" with the correct key name."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "joined-lodge",
+   "id": "56c8875a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "interesting-tower",
+   "id": "cc7fc1ac",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "alive-rehabilitation",
+   "id": "92814970",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "brutal-washer",
+   "id": "dbd54f05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "biblical-wedding",
+   "id": "f3668d2e",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "elder-carnival",
+   "id": "599d0605",
    "metadata": {},
    "outputs": [],
    "source": []
