--- a/notebooks/featurestore/hsfs/tags/feature_store_tags.ipynb
+++ b/notebooks/featurestore/hsfs/tags/feature_store_tags.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "3b4424b8",
+   "id": "1b8b7b71",
    "metadata": {},
    "source": [
     "---\n",
@@ -15,25 +15,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "915b67a8",
+   "id": "7c4d8131",
    "metadata": {},
    "source": [
     "# Tags\n",
     "\n",
-    "The feature store enables users to attach tags to artifacts, such as feature groups or to training datasets. Tags are aditional metadata attached to your artifacts and thus they can be used for an enhance full text search. Adding tags to a artifact provides users with a more dynamic metadata content that can be used for both storage as well as enhancing artifact discoverability. \n",
+    "The feature store enables users to attach tags to artifacts, such as feature groups or training datasets. Tags are aditional metadata attached to your artifacts and thus they can be used for an enhanced full text search. Adding tags to an artifact provides users with a more dynamic metadata content that can be used for both storage as well as enhancing artifact discoverability. \n",
     "\n",
     "<b>Note</b>: By default Hopsworks makes all metadata searchable, users can opt out for particular featurestores if they want to keep them private.\n",
     "\n",
-    "A tag is a {<b>key</b>: <b>value</b>} association, providing additional information about the data, such as for example geographic origin. This is useful in an organization as it adds more context to your data making it easier to share and discover data and artifacts. Tagging is only available in the enterprise version.\n",
+    "A tag is a {<b>key</b>: <b>value</b>} association, providing additional information about the data, such as for example geographic origin. This is useful in an organization as it adds more context to your data making it easier to share and discover data and artifacts. \n",
+    "\n",
+    "<b>Note</b>: Tagging is only available in the enterprise version.\n",
     "\n",
     "## Tag Schemas\n",
-    "The first step is to define the schemas of tags that can later be attached. These schemas follow the https://json-schema.org as reference. The schemas define legal jsons and these can be primitives, objects or arrays. The schemas themselves are also defined as jsons. \n",
+    "The first step is to define the schemas of tags that can later be attached to artifacts. These schemas follow the https://json-schema.org as reference and can be seen as types for jsons. The schemas define legal jsons and these can be primitives, objects or arrays. The schemas themselves are also defined as jsons. \n",
     "\n",
     "Allowed primitive types are:\n",
-    "* string\n",
-    "* boolean\n",
-    "* integer\n",
-    "* number (float)\n",
+    "\n",
+    "- string\n",
+    "- boolean\n",
+    "- integer\n",
+    "- number (float)\n",
     "    \n",
     "A tag of primitive type - string would look like:\n",
     "```\n",
@@ -44,7 +47,7 @@
     "string tag value\n",
     "```\n",
     "\n",
-    "But we can define arbitrarily complex json schemas, such as:\n",
+    "We can also define arbitrarily complex json schemas, such as:\n",
     "```\n",
     "{\n",
     "  \"type\" : \"object\", \n",
@@ -74,22 +77,21 @@
     "\n",
     "<b>Properties</b> section of a tag is a dictionary that defines field names and types.\n",
     "\n",
-    "Json schema are pretty lenient, all that the properties section tells us, is that if a field appears, it should be of the appropriate type. So if the json object contains the field `first_name`, this field cannot be of type `boolean`, for example, it should be of type `string`. What we emphasize here, is that the properties section does not impose that fields declared are mandatory, or that the json object cannot contain other fields that were not defined in the schemas.\n",
+    "Json schema are pretty lenient, all that the properties section tells us, is that if a field appears, it should be of the appropriate type. If the json object contains the field `first_name`, this field cannot be of type `boolean`, it has to be of type `string`. What we emphasize here, is that the properties section does not impose that fields declared are mandatory, or that the json object cannot contain other fields that were not defined in the schemas.\n",
     "\n",
-    "<b>Required</b> section enforces the mandatory fields. In our case above `first_name`, `last_name`, `age` are declared as mandatory, while hobbies is left as an optional field. \n",
+    "<b>Required</b> section enforces the mandatory fields. In our case above `first_name`, `last_name`, `age` are declared as mandatory, while `hobbies` is left as an optional field. \n",
     "\n",
     "<b>Additional Properties</b> section enforces the strictness of the schema. If we set this to `false` the json objects of this schema can only use fields that are declared (mandatoriy or optional) by the schema. No undeclared fields will be allowed.\n",
     "\n",
-    "Type object is the default type for schemas, so you can ommit it if you want to keep the schema short. The types can be arbitrarily nested within the schema to create arbitrarily complex types.\n",
+    "Type object is the default type for schemas, so you can ommit it if you want to keep the schema short.\n",
     "\n",
     "### Advanced tag usage\n",
-    "Json schemas as defined by https://json-schema.org allow for even more sections. \n",
+    "We can use additional properties of schemas as defined by https://json-schema.org to enhance our previous person schema:\n",
     "\n",
-    "We could enhance our previous person schema:\n",
-    "* Add a `$schema` section to allow us to use more advanced features of the json schemas defined in later drafts. The default schema draft is 4 and we will use 7 here (latest).\n",
-    "* Add an `id` field that is of type string but has to follow a particular regex pattern. We will also make this field mandatory.\n",
-    "* Set some rules on `age`, for example age should be an Integer between 0 and 150. \n",
-    "* Add an `address` field that is itself an object.\n",
+    "- Add a `$schema` section to allow us to use more advanced features of the json schemas defined in later drafts. The default schema draft is 4 and we will use 7 here (latest).\n",
+    "- Add an `id` field that is of type string but has to follow a particular regex pattern. We will also make this field mandatory.\n",
+    "- Set some rules on `age`, for example age should be an Integer between 0 and 150. \n",
+    "- Add an `address` field that is itself an object.\n",
     "\n",
     "\n",
     "```\n",
@@ -139,19 +141,25 @@
     "\n",
     "### Notebook required schema setup\n",
     "\n",
-    "In order for this notebook to work properly you have to correct schemas setup.\n",
+    "In order for this notebook to work properly you need an user with admin rights to define the following schemas.\n",
     "\n",
-    "* Primitive string\n",
-    "    * name: <b>location</b> \n",
-    "    * value: <b>{\"type\":\"string\"}</b>\n",
-    "* Complex object\n",
-    "    * name: <b>person</b>\n",
-    "    * value: <b>{\"\\$schema\":\"http://json-schema.org/draft-07/schema#\", \"type\":\"object\",\"properties\":{\"id\":{\"type\":\"string\",\"pattern\":\"^[A-Z]{2}[0-9]{4}\\$\"},\"first_name\":{\"type\":\"string\"},\"last_name\":{\"type\":\"string\"},\"age\":{\"type\":\"integer\",\"minimum\":0,\"maximum\":150},\"hobbies\":{\"type\":\"array\",\"items\":{\"type\":\"string\"}},\"address\":{\"street\":{\"type\":\"string\"},\"city\":{\"type\":\"string\"}}},\"required\":[\"id\",\"first_name\",\"last_name\",\"age\"],\"additionalProperties\":false}</b>\n",
+    "- Primitive string\n",
+    "    - name: <b>location</b> \n",
+    "    - value: \n",
+    "```\n",
+    "{\"type\":\"string\"}\n",
+    "```\n",
+    "- Complex object\n",
+    "    - name: <b>person</b>\n",
+    "    - value:\n",
+    "```\n",
+    "{\"$schema\":\"http://json-schema.org/draft-07/schema#\", \"type\":\"object\",\"properties\":{\"id\":{\"type\":\"string\",\"pattern\":\"^[A-Z]{2}[0-9]{4}$\"},\"first_name\":{\"type\":\"string\"},\"last_name\":{\"type\":\"string\"},\"age\":{\"type\":\"integer\",\"minimum\":0,\"maximum\":150},\"hobbies\":{\"type\":\"array\",\"items\":{\"type\":\"string\"}},\"address\":{\"street\":{\"type\":\"string\"},\"city\":{\"type\":\"string\"}}},\"required\":[\"id\",\"first_name\",\"last_name\",\"age\"],\"additionalProperties\":false}\n",
+    "```\n",
     "\n",
     "### UI operations\n",
-    "Creating schemas is currently only possible from the UI by a user with admin role, since the schemas are defined cluster wide. You can also attach and view tags from the UI. \n",
+    "Creating schemas is currently only possible from the UI by a user with admin role, since the schemas are defined cluster wide. \n",
     "\n",
-    "For more details on UI operations visit our documentation page: https://docs.hopsworks.ai/latest/generated/tags\n",
+    "From the Hopsworks UI you can also attach and view tags, as well as search for artifacts by the tags contents. For more details on UI operations visit our documentation page: https://docs.hopsworks.ai/latest/generated/tags\n",
     "\n",
     "### References\n",
     "For more references on the schemas check:\n",
@@ -161,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a534b0ca",
+   "id": "8a3d7ace",
    "metadata": {},
    "source": [
     "## Notebook tour \n",
@@ -171,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "43f9fb81",
+   "execution_count": 48,
+   "id": "8207b9f8",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d928a78e",
+   "id": "de39fdd7",
    "metadata": {},
    "source": [
     "### Creating a feature group and a training dataset\n",
@@ -201,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "108f6989",
+   "id": "2eb4f908",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3539f7ae",
+   "id": "ad7efe68",
    "metadata": {},
    "source": [
     "Create the feature group used in this notebook to attach tags to."
@@ -220,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e3cb31f5",
+   "id": "3d97fc61",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "11aa37e8",
+   "id": "441e759e",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d89465f9",
+   "id": "7f81ea7c",
    "metadata": {},
    "source": [
     "Create the training dataset used in this notebook to attach tags to."
@@ -268,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3d0c626e",
+   "id": "9d95a5b4",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "6809409b",
+   "id": "7eb37be5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e417314",
+   "id": "4aba3b8f",
    "metadata": {},
    "source": [
     "### Working with tags on featuregroups"
@@ -305,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32d2a9f3",
+   "id": "19cd413e",
    "metadata": {},
    "source": [
     "#### Attaching tags"
@@ -313,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95dd248c",
+   "id": "6e71b918",
    "metadata": {},
    "source": [
     "Attaching a simple key-value(string) tag to your featuregroup.\n",
@@ -325,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8b64d316",
+   "id": "94143fdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "915ad6d8",
+   "id": "8cf5824f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4a563ba",
+   "id": "316ceff5",
    "metadata": {},
    "source": [
     "#### Listing tags\n",
@@ -355,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "bb5b972c",
+   "id": "8f98c55b",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5d0186d",
+   "id": "c78d1b95",
    "metadata": {},
    "source": [
     "Reading all the tags attached to a feature group."
@@ -381,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "52bd79df",
+   "id": "e3c624ff",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bad5a46",
+   "id": "30ad312b",
    "metadata": {},
    "source": [
     "#### Deleting tags"
@@ -407,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "070012c2",
+   "id": "d13ca663",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09b4ccfb",
+   "id": "b87b1fb4",
    "metadata": {},
    "source": [
     "Tag is no longer in the list of attached tags, but can be re-attached at a later time."
@@ -425,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "3a180e61",
+   "id": "4e6ca626",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eec466e",
+   "id": "78292279",
    "metadata": {},
    "source": [
     "#### Using tags with more complex values\n",
@@ -452,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b2193dbf",
+   "id": "e5eabbf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "841785c3",
+   "id": "dc48408d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "04191a4d",
+   "id": "e5c3d2a4",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db2d9c4e",
+   "id": "12dde7ef",
    "metadata": {},
    "source": [
     "### Working with tags on training datasets\n",
@@ -510,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "687f70e4",
+   "id": "ae1baf43",
    "metadata": {},
    "source": [
     "#### Attaching tags"
@@ -519,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "a8a73717",
+   "id": "e69dd5ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59434da9",
+   "id": "9df15f9e",
    "metadata": {},
    "source": [
     "#### Listing tags"
@@ -537,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "c1bdebaa",
+   "id": "a334f584",
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "892b6df1",
+   "id": "128ad25b",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a854059b",
+   "id": "81a67fb7",
    "metadata": {},
    "source": [
     "#### Deleting tags"
@@ -581,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "effd224b",
+   "id": "a6707d71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "1d71d7bf",
+   "id": "be38215e",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "260b35ef",
+   "id": "6b9b9e8b",
    "metadata": {},
    "source": [
     "### Cleaning up"
@@ -616,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65cd3ab0",
+   "id": "09cf895f",
    "metadata": {},
    "source": [
     "If you want to be able to rerun the notebook with no failed paragraphs you will need to delete the feature group <b>tag_fg</b> and the training dataset <b>tag_td</b>."
@@ -624,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "e28640b7",
+   "execution_count": 49,
+   "id": "74ca8b6f",
    "metadata": {},
    "outputs": [
     {
@@ -639,6 +647,14 @@
    "source": [
     "connection.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cc5a63d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
